namespace AvansDevops.DevOps;

public interface IPipelineVisitor
{
    
    public void VisitPipeline(Pipeline pipeline);

}